# WFUBMC

./: .gitignore  readme.rst
snplash/: CMakeLists.txt  ChangeLog  Readme.rst  TODO  buildForIntelCompiler  buildForIntelCompiler.sh  run.txt  snplashConfig.h
snplash/docs/: CMakeLists.txt  doxy_config.txt  doxygen.conf.sample
snplash/manual/: adtree.tex  bagging.tex  dandelion.tex  dprime.tex  intertwolog.tex  latexmake  manualshell.tex  qsnpgwa.tex  snpgwa.tex  snplash.tex
snplash/src/: CMakeLists.txt  FeatureList  Makefile  Makefile.inc  icpchelp.txt  notes.txt  snpadt.cpp  snplashConfig.h  snplashConfig.h.in
snplash/src/Testing/: CMakeLists.txt  LR_Engine_Test.cpp  Statistics_Test.cpp  StringUtils_Test.cpp  snplashUnitTestDriver.cpp
snplash/src/docs/: doxy_config.txt
snplash/src/docs/html/: Makefile_8inc.html  ad__rule_8cpp.html  ad__rule_8h.html  ad__rule_8h_source.html  ad__tree__data_8cpp.html  ad__tree__data_8h.html  ad__tree__data_8h_source.html  adtree_8cpp.html  adtree_8h.html  adtree_8h_source.html  annotated.html  arff__reader_8cpp.html  arff__reader_8h.html  arff__reader_8h_source.html  bagging_8cpp.html  bagging_8h.html  bagging_8h_source.html  binary__bed__reader_8cpp.html  binary__bed__reader_8h.html  binary__bed__reader_8h_source.html  bug.html  classADTException.html  classADTree.html  classAD__Data.html  classAD__Rule.html  classArffReader.html  classBagging.html  classBinaryBedReader.html  classClassifies.html  classCondition.html  classConditionNumberEx.html  classContGenoStats.html  classContPopStats.html  classCrossValidation.html  classDandelion.html  classDandelionOutput.html  classDataAccess.html  classDataException.html  classDeterminantCalculationEx.html  classEM.html  (+276 more)
snplash/src/docs/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  (+134 more)
snplash/src/docs/latex/: Makefile_8inc.tex  ad__rule_8cpp.tex  ad__rule_8h.tex  ad__tree__data_8cpp.tex  ad__tree__data_8h.tex  adtree_8cpp.tex  adtree_8h.tex  annotated.tex  arff__reader_8cpp.tex  arff__reader_8h.tex  bagging_8cpp.tex  bagging_8h.tex  binary__bed__reader_8cpp.tex  binary__bed__reader_8h.tex  bug.tex  classADTException.eps  classADTException.tex  classADTree.eps  classADTree.tex  classAD__Data.tex  classAD__Rule.tex  classArffReader.eps  classArffReader.tex  classBagging.eps  classBagging.tex  classBinaryBedReader.eps  classBinaryBedReader.tex  classClassifies.eps  classClassifies.tex  classCondition.tex  classConditionNumberEx.eps  classConditionNumberEx.tex  classContGenoStats.tex  classContPopStats.tex  classCrossValidation.eps  classCrossValidation.tex  classDandelion.eps  classDandelion.tex  classDandelionOutput.tex  classDataAccess.tex  (+188 more)
snplash/src/engine/: CMakeLists.txt  combinable.h  data_plugin.cpp  data_plugin.h  engine.h  randwh.cpp  randwh.h  snp_data.cpp  snp_data.hh
snplash/src/engine/adtree/: Makefile  ad_tree_data.cpp  ad_tree_data.h  adtree.cpp
snplash/src/engine/bagging/: Makefile  bagging.cpp
snplash/src/engine/dandelion/: CMakeLists.txt  dandelion.cpp  dandelion.hh
snplash/src/engine/em/: CMakeLists.txt  em.cpp  em.h  haplotype.cpp  haplotype.h
snplash/src/engine/intertwolog/: CMakeLists.txt  intertwolog.cpp  intertwolog.hh
snplash/src/engine/ld/: CMakeLists.txt  ld.cpp  ld.h
snplash/src/engine/libs/: Makefile  ap.cpp  blas.h  ialglib.cpp  ialglib.h
snplash/src/engine/linalg/: CMakeLists.txt  alglibinternal.cpp  alglibmisc.cpp  blas.cpp  linalg.cpp
snplash/src/engine/machineLearning/: CMakeLists.txt  ad_rule.cpp  ad_rule.h  adtree.cpp  adtree.h  bagging.cpp  bagging.h  condition.cpp  condition.h  cross_val.cpp  cross_val.h  precondition.cpp  precondition.h
snplash/src/engine/output/: CMakeLists.txt  dandelion_out.cpp  dandelion_out.hh  dprime_out.cpp  dprime_out.h  intertwolog_out.cpp  intertwolog_out.hh  output.cpp  output.h  qsnpgwa_out.cpp  qsnpgwa_out.hh  snpgwa_out.cpp  snpgwa_out.hh  snpinfo_out.cpp  snpinfo_out.hh
snplash/src/engine/qsnpgwa/: CMakeLists.txt  cont_genostats.cpp  cont_genostats.hh  cont_popstats.cpp  cont_popstats.hh  qsnpgwa.cpp  qsnpgwa.hh
snplash/src/engine/snpgwa/: CMakeLists.txt  genostats.cpp  genostats.hh  haplostats.cpp  haplostats.hh  popstats.cpp  popstats.hh  snpgwa.cpp  snpgwa.h
snplash/src/engine/utils/: CMakeLists.txt  exceptions.h  float_ops.cpp  float_ops.hh  linear_regression.cpp  linear_regression.hh  lr.cpp  lr.hh  statistics.cpp  statistics.h  stringutils.cpp  stringutils.h  vecops.cpp  vecops.hh  zaykin.cpp  zaykin.hh
snplash/src/logger/: CMakeLists.txt  log.cpp  log.hh
snplash/src/manual/: adtree.tex  bagging.tex  dandelion.tex  dprime.tex  intertwolog.tex  manualshell.tex  qsnpgwa.tex  refs.bib
snplash/src/param/: CMakeLists.txt  Makefile  engine_param_reader.cpp  engine_param_reader.h  param_reader.cpp  param_reader.h
snplash/src/reader/: CMakeLists.txt  Makefile  arff_reader.cpp  arff_reader.h  binary_bed_reader.cpp  binary_bed_reader.h  linkage_reader.cpp  linkage_reader.h  reader.cpp  reader.h
snplash/src/unittest/: test_snpadt
snplash/t/: run_stat_tests.pl  sim2000.logistic.cov.2df.20110824.txt  sim2000.logistic.cov.lof.txt  snpl_test.ini  test_dprime.Snw  test_intertwolog.Snw  test_qsnpgwa.Snw  test_snpgwa.Snw
snplash/t/Rcode/: par.glm.cov.R  recode.R  wrap.head.R
snplash/t/Rcode/.svn/: all-wcprops  entries
snplash/t/Sim2000/: runTests.pl  sim2000.bed  sim2000.bim  sim2000.covphen  sim2000.dprime.snpmatrix.txt  sim2000.fam
snplash/t/Sim2000/.svn/: all-wcprops  entries
snplash/t/figures/.svn/: all-wcprops  entries
snplash/t/ref_data/: hisp.additive.lm.txt  hisp.dominant.lm.txt  hisp.dprime.snpmatrix.txt  hisp.plink.hwe.txt  hisp.recessive.lm.txt  hisp.rsquare.snpmatrix.txt  sim2000.logistic.cov.additive.txt  sim2000.logistic.cov.dominant.txt  sim2000.logistic.cov.lof.txt  sim2000.logistic.cov.recessive.txt  sim2000.plink.hwe.txt  sim2000.rsquare.snpmatrix.txt
snplash/t/sweave_files/: test_dprime.Snw  test_qsnpgwa.Snw  test_snpgwa.Snw
snplash/unittest/: Makefile
snplash/unittest/engine/utils/: test_lr_engine.cpp
(+10 files in other folders)
